--- a/public/index.html
+++ b/public/index.html
@@ -11,10 +11,9 @@
     <audio controls>
         <source src="/audio" type="audio/ogg">
     </audio>
-    <br>
-    <h2>Stream de audio sem download</h2>
+    <!-- <h2>Stream de audio sem download</h2>
     <audio controls controlsList="nodownload">
         <source src="/audio" type="audio/ogg">
-    </audio>
+    </audio> -->
 </body>
 </html>
