--- a/public/index.html
+++ b/public/index.html
@@ -4,16 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Exemplo</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    <h1>SERVER NODEJS</h1>
-    <h2>Stream de audio</h2>
-    <audio controls>
-        <source src="/audio" type="audio/ogg">
-    </audio>
-    <!-- <h2>Stream de audio sem download</h2>
-    <audio controls controlsList="nodownload">
-        <source src="/audio" type="audio/ogg">
-    </audio> -->
+<body styles="backgroundColor: #161a1f">
+    <div>
+        <h1>SERVER NODEJS</h1>
+        <h2>Stream de audio</h2>
+        <audio controls>
+            <source src="/audio" type="audio/ogg">
+        </audio>
+    </div>
 </body>
 </html>
